# project-sandbox

./: .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  SKILL.md  project_sandbox.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  mutation.yml
examples/: webapp.yml
tests/: conftest.py  test_cli.py  test_cmd_baseline.py  test_cmd_down_rm.py  test_cmd_init.py  test_cmd_ls.py  test_cmd_passthrough.py  test_cmd_up.py  test_db_rewrite.py  test_docker_helpers.py  test_e2e.py  test_env.py  test_install_smoke.py  test_manifest.py  test_override_gen.py  test_override_serialize.py  test_override_yaml.py  test_paths.py  test_port_mapping.py  test_ports.py  test_preflight.py  test_property.py  test_registry.py  test_runner.py  test_seed_prewarm.py  test_worktree.py
tests/fixtures/mini-stack/: docker-compose.yml
